--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   uuid: ^4.5.1
   flutter_svg: ^2.1.0
   flutter_slidable: ^3.1.2
+  intl: ^0.20.2
+  # intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
